clusters/sirius/apps/feeder/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feeder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feeder
  template:
    metadata:
      labels:
        app: feeder
    spec:
      containers:
        - name: feeder
          image: ghcr.io/moonblade/feeder:ts_1790959815 # {"$imagepolicy": "feeder:feeder"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: feeder-data
              mountPath: /data
            - name: feeder-config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 20
      volumes:
        - name: feeder-data
          nfs:
            server: nfs.sirius.local
            path: /mnt/primary/root/feeder
        - name: feeder-config
          nfs:
            server: nfs.sirius.local
            path: /mnt/primary/root/config/feeder
      imagePullSecrets:
        - name: feeder-image-pull
