clusters/sirius/apps/feeder/filebrowser.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  type: ExternalName
  externalName: filebrowser.filebrowser.svc.cluster.local
