clusters/sirius/apps/feeder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feeder
spec:
  selector:
    app: feeder
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
